[gd_scene load_steps=2 format=3 uid="uid://b1wrv31em1a0m"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_o8wkt"]

[node name="MenuLayer" type="CanvasLayer"]
process_mode = 3

[node name="FPSLabel" type="Label" parent="."]
custom_minimum_size = Vector2(70, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_top = 14.0
offset_right = -27.0
offset_bottom = 40.0
grow_horizontal = 0
scale = Vector2(1.2, 1.2)
text = "FPS:0000"

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8wkt")

[node name="Credits" type="Label" parent="Menu"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.5
offset_top = -63.0
offset_right = 127.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "Made by: Jaanus Jaggo (Perfoon)"

[node name="Panel" type="Panel" parent="Menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -155.0
offset_right = 325.0
offset_bottom = 155.0
grow_vertical = 2
size_flags_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="Menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_right = -17.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="Menu/Panel/VBox"]
layout_mode = 2
text = "Continue"

[node name="ColorPickerButton" type="ColorPickerButton" parent="Menu/Panel/VBox"]
layout_mode = 2
focus_mode = 0
text = "Color"
color = Color(1, 0.266667, 1, 1)
edit_alpha = false

[node name="ScalingOptionButton" type="OptionButton" parent="Menu/Panel/VBox"]
layout_mode = 2
item_count = 10
selected = 0
popup/item_0/text = "100% scaling"
popup/item_0/id = 0
popup/item_1/text = "90% scaling"
popup/item_1/id = 1
popup/item_2/text = "80% scaling"
popup/item_2/id = 1280
popup/item_3/text = "70% scaling"
popup/item_3/id = 2
popup/item_4/text = "60% scaling"
popup/item_4/id = 3
popup/item_5/text = "50% scaling"
popup/item_5/id = 4
popup/item_6/text = "40% scaling"
popup/item_6/id = 5
popup/item_7/text = "30% scaling"
popup/item_7/id = 6
popup/item_8/text = "20% scaling"
popup/item_8/id = 8
popup/item_9/text = "10% scaling"
popup/item_9/id = 9

[node name="FPSButton" type="CheckButton" parent="Menu/Panel/VBox"]
layout_mode = 2
text = "Show FPS"

[node name="FreeFly" type="CheckButton" parent="Menu/Panel/VBox"]
layout_mode = 2
text = "Free Fly"

[node name="Fullscreen" type="Button" parent="Menu/Panel/VBox"]
layout_mode = 2
text = "Full Screen
"

[node name="Exit" type="Button" parent="Menu/Panel/VBox"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Menu/Panel/VBox/Continue" to="Menu" method="_on_continue_pressed"]
[connection signal="color_changed" from="Menu/Panel/VBox/ColorPickerButton" to="Menu" method="_on_color_picker_button_color_changed"]
[connection signal="item_selected" from="Menu/Panel/VBox/ScalingOptionButton" to="Menu" method="_on_scaling_option_button_item_selected"]
[connection signal="toggled" from="Menu/Panel/VBox/FPSButton" to="Menu" method="_on_fps_button_toggled"]
[connection signal="toggled" from="Menu/Panel/VBox/FreeFly" to="Menu" method="_on_free_fly_toggled"]
[connection signal="pressed" from="Menu/Panel/VBox/Fullscreen" to="Menu" method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Menu/Panel/VBox/Exit" to="Menu" method="_on_exit_pressed"]
